--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }} # Add this line
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -23,5 +21,5 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }} # Changed from GITHUB_TOKEN
-          publish_dir: ./dist # Adjust to your build folder
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./_site
